--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-30 08:57 -->
+<!-- 2022-09-30 18:59 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -34,19 +34,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org14d7c50">1. 暑假</a>
+<li><a href="#orgb358e16">1. 暑假</a>
 <ul>
-<li><a href="#org7cdc774">1.1. 夏令营</a></li>
+<li><a href="#org620c88f">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orgd53cac0">2. 打工</a></li>
-<li><a href="#org9fba0b6">3. 我的928</a>
+<li><a href="#org2014b61">2. 打工</a></li>
+<li><a href="#orgba170c2">3. 我的928</a>
 <ul>
-<li><a href="#orge42d2ef">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org84a86ed">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgab37857">4. 他们的928</a></li>
-<li><a href="#org4e2a4e5">5. 总结</a></li>
+<li><a href="#org4840441">4. 他们的928</a></li>
+<li><a href="#org7b978c5">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -56,7 +56,7 @@
 </p>
 
 
-<figure id="orgc9a63ff">
+<figure id="org9e1029c">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -79,8 +79,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org14d7c50" class="outline-2">
-<h2 id="org14d7c50"><span class="section-number-2">1.</span> <a href="#org14d7c50">暑假</a></h2>
+<div id="outline-container-orgb358e16" class="outline-2">
+<h2 id="orgb358e16"><span class="section-number-2">1.</span> <a href="#orgb358e16">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -104,8 +104,8 @@
 </p>
 </div>
 
-<div id="outline-container-org7cdc774" class="outline-3">
-<h3 id="org7cdc774"><span class="section-number-3">1.1.</span> <a href="#org7cdc774">夏令营</a></h3>
+<div id="outline-container-org620c88f" class="outline-3">
+<h3 id="org620c88f"><span class="section-number-3">1.1.</span> <a href="#org620c88f">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -147,8 +147,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd53cac0" class="outline-2">
-<h2 id="orgd53cac0"><span class="section-number-2">2.</span> <a href="#orgd53cac0">打工</a></h2>
+<div id="outline-container-org2014b61" class="outline-2">
+<h2 id="org2014b61"><span class="section-number-2">2.</span> <a href="#org2014b61">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -162,8 +162,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org9fba0b6" class="outline-2">
-<h2 id="org9fba0b6"><span class="section-number-2">3.</span> <a href="#org9fba0b6">我的928</a></h2>
+<div id="outline-container-orgba170c2" class="outline-2">
+<h2 id="orgba170c2"><span class="section-number-2">3.</span> <a href="#orgba170c2">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -179,8 +179,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orge42d2ef" class="outline-3">
-<h3 id="orge42d2ef"><span class="section-number-3">3.1.</span> <a href="#orge42d2ef">928演唱会(bushi</a></h3>
+<div id="outline-container-org84a86ed" class="outline-3">
+<h3 id="org84a86ed"><span class="section-number-3">3.1.</span> <a href="#org84a86ed">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -188,7 +188,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org9c88e6a">
+<figure id="org6a11b5b">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org6e0498a">
+<figure id="orgfbead04">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -213,8 +213,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgab37857" class="outline-2">
-<h2 id="orgab37857"><span class="section-number-2">4.</span> <a href="#orgab37857">他们的928</a></h2>
+<div id="outline-container-org4840441" class="outline-2">
+<h2 id="org4840441"><span class="section-number-2">4.</span> <a href="#org4840441">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -234,8 +234,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org4e2a4e5" class="outline-2">
-<h2 id="org4e2a4e5"><span class="section-number-2">5.</span> <a href="#org4e2a4e5">总结</a></h2>
+<div id="outline-container-org7b978c5" class="outline-2">
+<h2 id="org7b978c5"><span class="section-number-2">5.</span> <a href="#org7b978c5">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -250,7 +250,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 08:57</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 18:59</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
