--- a/content/qq-group-export.html
+++ b/content/qq-group-export.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-30 08:57 -->
+<!-- 2022-09-30 18:59 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>导出QQ群成员</title>
@@ -34,15 +34,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgc04c9ae">1. 导出成员</a></li>
-<li><a href="#org001b7b3">2. 交叉对比</a></li>
+<li><a href="#org1b45226">1. 导出成员</a></li>
+<li><a href="#org21689bf">2. 交叉对比</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgc04c9ae" class="outline-2">
-<h2 id="orgc04c9ae"><span class="section-number-2">1.</span> <a href="#orgc04c9ae">导出成员</a></h2>
+<div id="outline-container-org1b45226" class="outline-2">
+<h2 id="org1b45226"><span class="section-number-2">1.</span> <a href="#org1b45226">导出成员</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 来自: <a href="https://www.zhihu.com/question/58753010/answer/1354673772">如何批量导出QQ群成员的QQ号/QQ邮箱等相关信息？ - 大发撸卡的回答 - 知乎</a>
@@ -70,8 +70,8 @@ console.log(t);
 </div>
 </div>
 
-<div id="outline-container-org001b7b3" class="outline-2">
-<h2 id="org001b7b3"><span class="section-number-2">2.</span> <a href="#org001b7b3">交叉对比</a></h2>
+<div id="outline-container-org21689bf" class="outline-2">
+<h2 id="org21689bf"><span class="section-number-2">2.</span> <a href="#org21689bf">交叉对比</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 交叉对比两个群的QQ号:
@@ -92,7 +92,7 @@ console.log(t);
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-29 16:05</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 16:09</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 08:57</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 18:59</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
 </table>
