--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-30 18:59 -->
+<!-- 2022-09-30 19:16 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,46 +33,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org76aeb4b">1. 妙妙文章</a>
+<li><a href="#org426cfcc">1. 妙妙文章</a>
 <ul>
-<li><a href="#org4c53358">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#orgdf9e573">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#orge323865">1.3. 关于编辑器</a></li>
-<li><a href="#orga5dfd32">1.4. 关于代码</a></li>
-<li><a href="#org247d407">1.5. 关于CPU</a>
+<li><a href="#orgafd484c">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org198486d">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org680b392">1.3. 关于编辑器</a></li>
+<li><a href="#org42301a0">1.4. 关于代码</a></li>
+<li><a href="#org03b89e5">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgcdab18c">1.5.1. Lisp</a></li>
+<li><a href="#org482cfdd">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org8278c34">1.6. 关于算法</a>
+<li><a href="#org0a2e292">1.6. 关于算法</a>
 <ul>
-<li><a href="#org18c136f">1.6.1. 关于随机</a></li>
+<li><a href="#org8a4149d">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org3bb2305">1.7. 关于AI</a></li>
-<li><a href="#orga162a57">1.8. 关于软件</a>
+<li><a href="#orgfc14601">1.7. 关于AI</a></li>
+<li><a href="#orgbf3962a">1.8. 关于软件</a>
 <ul>
-<li><a href="#orgefb5f07">1.8.1. SQLite</a></li>
+<li><a href="#orgefc944c">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgb8488d7">1.9. 关于workflow</a></li>
+<li><a href="#orgade6ac9">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org7f6aea8">2. 棒棒视频</a>
+<li><a href="#org8b03808">2. 棒棒视频</a>
 <ul>
-<li><a href="#org735f944">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org0e25dd7">2.2. 各种剧</a></li>
-<li><a href="#orgafe0a80">2.3. 电影</a></li>
+<li><a href="#org687b10c">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org18a972c">2.2. 各种剧</a></li>
+<li><a href="#orga45eb74">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgebec9ce">3. 快乐游戏</a></li>
-<li><a href="#orgb4f348b">4. 宝藏博主</a></li>
-<li><a href="#org23f797c">5. 有意思的</a>
+<li><a href="#orgf7652e0">3. 快乐游戏</a></li>
+<li><a href="#org507b339">4. 宝藏博主</a></li>
+<li><a href="#orga5e292a">5. 有意思的</a>
 <ul>
-<li><a href="#orgdfb4320">5.1. 关于网页​&#x2014;HTML &amp; CSS</a></li>
+<li><a href="#orgb6275be">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org5eead55">6. 我想玩的</a></li>
+<li><a href="#org271499e">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -81,8 +81,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org76aeb4b" class="outline-2">
-<h2 id="org76aeb4b"><span class="section-number-2">1.</span> <a href="#org76aeb4b">妙妙文章</a></h2>
+<div id="outline-container-org426cfcc" class="outline-2">
+<h2 id="org426cfcc"><span class="section-number-2">1.</span> <a href="#org426cfcc">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -213,7 +213,7 @@ paper可以凭空产生，但不会消失 <br>
 </p>
 
 <p>
-——<a href="https://www.zhihu.com/people/tang-huan-tao-81">金闪闪尼古尼古​</a>
+——<a href="https://www.zhihu.com/people/tang-huan-tao-81">金闪闪尼古尼古</a>
 </p>
 </blockquote></li>
 <li><p>
@@ -441,7 +441,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="orgaa353c9">
+<figure id="org47e5490">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -505,8 +505,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org4c53358" class="outline-3">
-<h3 id="org4c53358"><span class="section-number-3">1.1.</span> <a href="#org4c53358">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgafd484c" class="outline-3">
+<h3 id="orgafd484c"><span class="section-number-3">1.1.</span> <a href="#orgafd484c">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -536,8 +536,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-orgdf9e573" class="outline-3">
-<h3 id="orgdf9e573"><span class="section-number-3">1.2.</span> <a href="#orgdf9e573">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org198486d" class="outline-3">
+<h3 id="org198486d"><span class="section-number-3">1.2.</span> <a href="#org198486d">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -571,8 +571,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-orge323865" class="outline-3">
-<h3 id="orge323865"><span class="section-number-3">1.3.</span> <a href="#orge323865">关于编辑器</a></h3>
+<div id="outline-container-org680b392" class="outline-3">
+<h3 id="org680b392"><span class="section-number-3">1.3.</span> <a href="#org680b392">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -588,8 +588,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orga5dfd32" class="outline-3">
-<h3 id="orga5dfd32"><span class="section-number-3">1.4.</span> <a href="#orga5dfd32">关于代码</a></h3>
+<div id="outline-container-org42301a0" class="outline-3">
+<h3 id="org42301a0"><span class="section-number-3">1.4.</span> <a href="#org42301a0">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-org247d407" class="outline-3">
-<h3 id="org247d407"><span class="section-number-3">1.5.</span> <a href="#org247d407">关于CPU</a></h3>
+<div id="outline-container-org03b89e5" class="outline-3">
+<h3 id="org03b89e5"><span class="section-number-3">1.5.</span> <a href="#org03b89e5">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -630,8 +630,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgcdab18c" class="outline-4">
-<h4 id="orgcdab18c"><span class="section-number-4">1.5.1.</span> <a href="#orgcdab18c">Lisp</a></h4>
+<div id="outline-container-org482cfdd" class="outline-4">
+<h4 id="org482cfdd"><span class="section-number-4">1.5.1.</span> <a href="#org482cfdd">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -654,8 +654,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org8278c34" class="outline-3">
-<h3 id="org8278c34"><span class="section-number-3">1.6.</span> <a href="#org8278c34">关于算法</a></h3>
+<div id="outline-container-org0a2e292" class="outline-3">
+<h3 id="org0a2e292"><span class="section-number-3">1.6.</span> <a href="#org0a2e292">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -674,8 +674,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org18c136f" class="outline-4">
-<h4 id="org18c136f"><span class="section-number-4">1.6.1.</span> <a href="#org18c136f">关于随机</a></h4>
+<div id="outline-container-org8a4149d" class="outline-4">
+<h4 id="org8a4149d"><span class="section-number-4">1.6.1.</span> <a href="#org8a4149d">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -689,8 +689,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org3bb2305" class="outline-3">
-<h3 id="org3bb2305"><span class="section-number-3">1.7.</span> <a href="#org3bb2305">关于AI</a></h3>
+<div id="outline-container-orgfc14601" class="outline-3">
+<h3 id="orgfc14601"><span class="section-number-3">1.7.</span> <a href="#orgfc14601">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -700,8 +700,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orga162a57" class="outline-3">
-<h3 id="orga162a57"><span class="section-number-3">1.8.</span> <a href="#orga162a57">关于软件</a></h3>
+<div id="outline-container-orgbf3962a" class="outline-3">
+<h3 id="orgbf3962a"><span class="section-number-3">1.8.</span> <a href="#orgbf3962a">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -712,8 +712,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgefb5f07" class="outline-4">
-<h4 id="orgefb5f07"><span class="section-number-4">1.8.1.</span> <a href="#orgefb5f07">SQLite</a></h4>
+<div id="outline-container-orgefc944c" class="outline-4">
+<h4 id="orgefc944c"><span class="section-number-4">1.8.1.</span> <a href="#orgefc944c">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -727,8 +727,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgb8488d7" class="outline-3">
-<h3 id="orgb8488d7"><span class="section-number-3">1.9.</span> <a href="#orgb8488d7">关于workflow</a></h3>
+<div id="outline-container-orgade6ac9" class="outline-3">
+<h3 id="orgade6ac9"><span class="section-number-3">1.9.</span> <a href="#orgade6ac9">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -738,12 +738,12 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org7f6aea8" class="outline-2">
-<h2 id="org7f6aea8"><span class="section-number-2">2.</span> <a href="#org7f6aea8">棒棒视频</a></h2>
+<div id="outline-container-org8b03808" class="outline-2">
+<h2 id="org8b03808"><span class="section-number-2">2.</span> <a href="#org8b03808">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
-<a href="https://www.bilibili.com/video/BV16U4y1u7U6">市值上亿的老板，家中只有4m<sup>2</sup>​小天地？！ &#x2014; 可以去你家嘛</a> 原来君茹在差评工作呀😯
+<a href="https://www.bilibili.com/video/BV16U4y1u7U6">市值上亿的老板，家中只有4m<sup>2</sup>小天地？！ &#x2014; 可以去你家嘛</a> 原来君茹在差评工作呀😯
 </p>
 <blockquote>
 <p>
@@ -779,7 +779,7 @@ self-destructive.
 That Nintendo story also brings to mind the famous Miyamoto quote: &ldquo;A
 delayed game is eventually good, but a rushed game is forever bad.&rdquo;
 Practical, but also works on the human level in this case.
-&#x2014;​<a href="https://www.youtube.com/channel/UCzdQOZVPcWHrceRZ7jdpZaQ">GhostSamurai</a>
+&#x2014;<a href="https://www.youtube.com/channel/UCzdQOZVPcWHrceRZ7jdpZaQ">GhostSamurai</a>
 </p>
 </blockquote></li>
 <li><a href="https://www.bilibili.com/festival/capsules?bvid=BV1mP411G75r">Bilibili 胶囊计划 第一届</a>
@@ -809,8 +809,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org735f944" class="outline-3">
-<h3 id="org735f944"><span class="section-number-3">2.1.</span> <a href="#org735f944">Veritasium 真理元素</a></h3>
+<div id="outline-container-org687b10c" class="outline-3">
+<h3 id="org687b10c"><span class="section-number-3">2.1.</span> <a href="#org687b10c">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -835,8 +835,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0e25dd7" class="outline-3">
-<h3 id="org0e25dd7"><span class="section-number-3">2.2.</span> <a href="#org0e25dd7">各种剧</a></h3>
+<div id="outline-container-org18a972c" class="outline-3">
+<h3 id="org18a972c"><span class="section-number-3">2.2.</span> <a href="#org18a972c">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -857,8 +857,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgafe0a80" class="outline-3">
-<h3 id="orgafe0a80"><span class="section-number-3">2.3.</span> <a href="#orgafe0a80">电影</a></h3>
+<div id="outline-container-orga45eb74" class="outline-3">
+<h3 id="orga45eb74"><span class="section-number-3">2.3.</span> <a href="#orga45eb74">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +883,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgebec9ce" class="outline-2">
-<h2 id="orgebec9ce"><span class="section-number-2">3.</span> <a href="#orgebec9ce">快乐游戏</a></h2>
+<div id="outline-container-orgf7652e0" class="outline-2">
+<h2 id="orgf7652e0"><span class="section-number-2">3.</span> <a href="#orgf7652e0">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgb4f348b" class="outline-2">
-<h2 id="orgb4f348b"><span class="section-number-2">4.</span> <a href="#orgb4f348b">宝藏博主</a></h2>
+<div id="outline-container-org507b339" class="outline-2">
+<h2 id="org507b339"><span class="section-number-2">4.</span> <a href="#org507b339">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -926,15 +926,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="org42d9978">
+<figure id="orgfd0f0ab">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-org23f797c" class="outline-2">
-<h2 id="org23f797c"><span class="section-number-2">5.</span> <a href="#org23f797c">有意思的</a></h2>
+<div id="outline-container-orga5e292a" class="outline-2">
+<h2 id="orga5e292a"><span class="section-number-2">5.</span> <a href="#orga5e292a">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -958,8 +958,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orgdfb4320" class="outline-3">
-<h3 id="orgdfb4320"><span class="section-number-3">5.1.</span> <a href="#orgdfb4320">关于网页​&#x2014;HTML &amp; CSS</a></h3>
+<div id="outline-container-orgb6275be" class="outline-3">
+<h3 id="orgb6275be"><span class="section-number-3">5.1.</span> <a href="#orgb6275be">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -971,8 +971,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org5eead55" class="outline-2">
-<h2 id="org5eead55"><span class="section-number-2">6.</span> <a href="#org5eead55">我想玩的</a></h2>
+<div id="outline-container-org271499e" class="outline-2">
+<h2 id="org271499e"><span class="section-number-2">6.</span> <a href="#org271499e">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -994,8 +994,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-30 18:58</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 18:59</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-30 19:15</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 19:16</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
