--- a/content/qq-group-export.html
+++ b/content/qq-group-export.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-09-30 19:16 -->
+<!-- 2022-10-01 02:58 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>导出QQ群成员</title>
@@ -34,15 +34,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4e42bda">1. 导出成员</a></li>
-<li><a href="#org38efc2f">2. 交叉对比</a></li>
+<li><a href="#org987625f">1. 导出成员</a></li>
+<li><a href="#org4d79e97">2. 交叉对比</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-org4e42bda" class="outline-2">
-<h2 id="org4e42bda"><span class="section-number-2">1.</span> <a href="#org4e42bda">导出成员</a></h2>
+<div id="outline-container-org987625f" class="outline-2">
+<h2 id="org987625f"><span class="section-number-2">1.</span> <a href="#org987625f">导出成员</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 来自: <a href="https://www.zhihu.com/question/58753010/answer/1354673772">如何批量导出QQ群成员的QQ号/QQ邮箱等相关信息？ - 大发撸卡的回答 - 知乎</a>
@@ -70,8 +70,8 @@ console.log(t);
 </div>
 </div>
 
-<div id="outline-container-org38efc2f" class="outline-2">
-<h2 id="org38efc2f"><span class="section-number-2">2.</span> <a href="#org38efc2f">交叉对比</a></h2>
+<div id="outline-container-org4d79e97" class="outline-2">
+<h2 id="org4d79e97"><span class="section-number-2">2.</span> <a href="#org4d79e97">交叉对比</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 交叉对比两个群的QQ号:
@@ -92,7 +92,7 @@ console.log(t);
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-29 16:05</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 16:09</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-09-30 19:16</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-01 02:58</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
 </table>
